added adding token API
